--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=desafio-itau
+#spring.datasource.url=none
+#spring.datasource.initialize=false
+#spring.jpa.hibernate.ddl-auto=none
